--- a/eightysixlist/client/src/screens/Register.css
+++ b/eightysixlist/client/src/screens/Register.css
@@ -6,7 +6,6 @@
 #input-main-box {
   display: flex;
   flex-direction: column;
-  margin-top: 15px;
 }
 
 #register-title {
@@ -24,10 +23,12 @@
 #phone-box,
 #age-box,
 #restaurant-box,
-#location-box {
+#location-box,
+#register-terms-box,
+#register-community-box {
   display: flex;
   width: 50vw;
-  padding: 1.1vh 0;
+  padding: 0.75vh 0;
   justify-content: space-between;
   color: #421527;
   font-weight: bolder;
@@ -42,5 +43,5 @@
 #register-submit {
   width: fit-content;
   font-size: 15px;
-  margin: 25px auto;
+  margin: 45px auto;
 }
