--- a/eightysixlist/client/src/components/Footer.css
+++ b/eightysixlist/client/src/components/Footer.css
@@ -1,7 +1,7 @@
 #footer-container {
   background-color: #dceacd;
   height: 15vh;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100vw;
 }
