--- a/eightysixlist/client/src/components/PostCard/PostCard.css
+++ b/eightysixlist/client/src/components/PostCard/PostCard.css
@@ -21,15 +21,22 @@
   padding: 0 1vw;
 }
 
+#comment-ternary {
+  border: none;
+  background-color: transparent;
+  color: darkgray;
+}
+
+#post-image {
+  width: 200px;
+  height: auto;
+}
+
 #post-card-bottom {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   margin-bottom: 1vw;
-}
-
-#comment-ternary {
-  color: darkgray;
 }
 
 #post-card-edit-button,
