--- a/eightysixlist/client/src/components/LandingCard.css
+++ b/eightysixlist/client/src/components/LandingCard.css
@@ -10,7 +10,6 @@
 #landing-card-details {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
   box-shadow: 1px 4px 4px 4px #421527;
   width: 38vw;
   height: fit-content;
@@ -25,6 +24,8 @@
 #landing-post-image {
   width: 200px;
   height: auto;
+  max-height: 150px;
+  padding-bottom: 2vh;
 }
 
 #landing-card-bottom {
