--- a/eightysixlist/client/src/components/PostCard.css
+++ b/eightysixlist/client/src/components/PostCard.css
@@ -10,15 +10,25 @@
 #post-card-details {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
+  box-shadow: 1px 4px 4px 4px #421527;
   max-width: 50vw;
   width: 50vw;
   margin: 1vw 0;
+  text-align: center;
+  align-items: center;
 }
 
 .post-attr {
   font-weight: bold;
   padding: 0 1vw;
+}
+
+#home-title {
+  font-size: 2.25vh;
+}
+
+#home-content {
+  font-size: 2vh;
 }
 
 #comment-ternary {
@@ -30,6 +40,7 @@
 #post-image {
   width: 200px;
   height: auto;
+  margin-bottom: 2vh;
 }
 
 #post-card-bottom {
@@ -45,7 +56,7 @@
   width: 10vw;
   padding: 0.5vw;
   margin: 0 0.5vw;
-  background-color: #dd7965;
-  color: #341528;
-  font-weight: bolder;
+  border: none;
+  background-color: transparent;
+  color: darkgray;
 }
