create post works without having users at an id

--- a/eightysixlist/client/src/components/LandingCard.css
+++ b/eightysixlist/client/src/components/LandingCard.css
@@ -33,9 +33,9 @@
 }
 
 #landing-post-image {
-  width: 200px;
-  height: auto;
-  max-height: 150px;
+  width: auto;
+  height: 30vh;
+  max-height: 30vh;
   padding-bottom: 2vh;
 }
 
