--- a/eightysixlist/client/src/components/PostCard.css
+++ b/eightysixlist/client/src/components/PostCard.css
@@ -38,8 +38,9 @@
 }
 
 #post-image {
-  width: 200px;
-  height: auto;
+  width: auto;
+  height: 30vh;
+  max-height: 30vh;
   margin-bottom: 2vh;
 }
 
