--- a/eightysixlist/client/src/components/PostCard.css
+++ b/eightysixlist/client/src/components/PostCard.css
@@ -38,6 +38,13 @@
   color: darkgray;
 }
 
+#show-comments-box {
+  display: flex;
+  margin-top: 3vh;
+  width: 45vw;
+  text-align: left;
+}
+
 #post-image {
   width: auto;
   height: 30vh;
@@ -48,6 +55,7 @@
 
 #post-card-bottom {
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   margin-bottom: 1vw;
