added an unfunctional comment box

--- a/eightysixlist/client/src/components/PostCard.css
+++ b/eightysixlist/client/src/components/PostCard.css
@@ -40,6 +40,7 @@
 
 #show-comments-box {
   display: flex;
+  flex-direction: column;
   margin-top: 3vh;
   width: 45vw;
   text-align: left;
@@ -70,4 +71,12 @@
   border: none;
   background-color: transparent;
   color: darkgray;
+}
+
+#new-comment {
+  margin-left: 0.8vw;
+  margin-bottom: 1vh;
+  width: 43vw;
+  margin: 1.5vh 0 1.5vh 0.75vw;
+  padding: 1vh 1vw;
 }
