--- a/eightysixlist/client/src/screens/Home.css
+++ b/eightysixlist/client/src/screens/Home.css
@@ -13,7 +13,7 @@
   font-size: 2vh;
   width: fit-content;
   padding: 0.5vw;
-  margin: 0 0.5vw 1.5vh 0.5vw;
+  margin: 3vh 0.5vw 1.5vh 0.5vw;
   background-color: #dd7965;
   color: #341528;
   font-weight: bolder;
