--- a/eightysixlist/client/src/layouts/Footer/Footer.css
+++ b/eightysixlist/client/src/layouts/Footer/Footer.css
@@ -1,5 +1,5 @@
 #footer-container {
-  background-color: #dceacd;
+  background-color: #9a5962;
   height: 15vh;
   position: relative;
   bottom: 0;
