--- a/eightysixlist/client/src/screens/EditPost.css
+++ b/eightysixlist/client/src/screens/EditPost.css
@@ -20,7 +20,7 @@
   width: 25vw;
   border: 1px solid black;
   padding: 1vh 1vw;
-  background-color: #dceacd;
+  background-color: #a1b6c1;
 }
 
 #edit-title-box,
