--- a/eightysixlist/client/src/screens/Home.css
+++ b/eightysixlist/client/src/screens/Home.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #dceacd8a;
+  background-color: #a1b6c1a8;
 }
 
 #home-title {
@@ -14,7 +14,6 @@
   width: fit-content;
   padding: 0.5vw;
   margin: 3vh 0.5vw 1.5vh 0.5vw;
-  background-color: #dd7965;
-  color: #341528;
+  background-color: #e38597;
   font-weight: bolder;
 }
