--- a/eightysixlist/client/src/screens/Login.css
+++ b/eightysixlist/client/src/screens/Login.css
@@ -44,6 +44,10 @@
   margin-bottom: 2vh;
 }
 
+#login-submit:hover {
+  background-color: #69c2b9;
+}
+
 a {
   text-decoration: none;
   color: #9a5962;
