--- a/eightysixlist/client/src/components/RestaurantLandingCard.css
+++ b/eightysixlist/client/src/components/RestaurantLandingCard.css
@@ -27,3 +27,9 @@
   font-weight: bold;
   padding: 0 1vw;
 }
+
+@media screen and (max-width: 375px) {
+  #restaurant-landing-card-main-container {
+    background-color: #f5eed7;
+  }
+}
