--- a/eightysixlist/client/src/screens/Landing.css
+++ b/eightysixlist/client/src/screens/Landing.css
@@ -23,4 +23,14 @@
   height: fit-content;
   text-align: center;
   margin-top: 5vh;
+  order: -1;
+}
+
+@media screen and (max-width: 775px) {
+  #main-container-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
