--- a/eightysixlist/client/src/components/LandingCard.css
+++ b/eightysixlist/client/src/components/LandingCard.css
@@ -10,10 +10,11 @@
 #landing-card-details {
   display: flex;
   flex-direction: column;
-  box-shadow: 1px 4px 4px 4px #421527;
+  box-shadow: 1px 1px 8px 2px #2a5279;
   width: 38vw;
   height: fit-content;
   margin: 1vw 0;
+  background-color: #f7f8f4;
 }
 
 .post-attr {
