--- a/eightysixlist/client/src/layouts/Header/Header.css
+++ b/eightysixlist/client/src/layouts/Header/Header.css
@@ -2,17 +2,18 @@
   display: flex;
   justify-content: space-between;
   padding: 0 15px 0 15px;
-  background: rgb(93, 173, 165);
+  /* background: rgb(93, 173, 165);
   background: linear-gradient(
     90deg,
     #5dada5 2%,
     #a1b6c1 18%,
     #e38597 89%,
     #421527 100%
-  );
-  height: 12vh;
+  ); */
+  background-color: #f7f8f4;
+  height: 6vh;
   align-items: center;
-  box-shadow: 2px 3px 8px 8px #341528;
+  box-shadow: 1px 1px 8px 2px #2a5279;
 }
 
 #header-left {
@@ -43,15 +44,15 @@
 #logout-button {
   font-size: 16px;
   width: fit-content;
-  padding: 0.5vw;
+  padding: 0.25vw;
   margin-right: 1vw;
-  background-color: #5dada5;
+  background-color: #7e90ab;
 }
 
 #login-button:hover,
 #register-button:hover,
 #logout-button:hover {
-  background-color: #69c2b9;
+  background-color: #96abca;
 }
 
 .current-user-display {
